# anime_mobile

./: .dockerignore  .gitignore  .lua-format  .rive_head  AGENTS.md  ALL_PRS_FINAL_VALIDATION.md  ARTBOARD_CATALOG_ADDED.md  BEE_BABY_ROUND_TRIP_ANALYSIS.md  CI_AUTOMATION_COMPLETE.md  CLIPPING_DEBUG_TEST.md  CMakeLists.txt  CMakeLists_real.txt  CMakeLists_simple.txt  CRITICAL_FINDINGS_SUMMARY.md  Dockerfile  Doxyfile  FINAL_OPTIONAL_PRS_COMPLETE.md  FINAL_ROUNDTRIP_VALIDATION.md  FINAL_SESSION_SUMMARY.md  FINAL_SHOWCASE.json  FINAL_SUMMARY.md  GREY_SCREEN_RESOLUTION.md  GREY_SCREEN_ROOT_CAUSE.md  JSON_TO_RIV_README.md  LICENSE  NEXT_SESSION_PROMPT.md  OPEN_TASKS_PRIORITY.md  OPTIONAL_NEXT_PRS.md  PR1_EXTENDED_SUMMARY.md  PR1_SUMMARY.md  PR1_VALIDATION.md  PR2B_RESULTS.md  PR2D_STATUS.md  PR2_SUMMARY.md  PR3_KEYED_DATA_COMPLETE.md  PR3_SUMMARY.md  PR4_SUMMARY.md  PROJECT_STATUS.md  PR_EXTRACTOR_SKIP_TRIMPATH_COMPLETE.md  README.md  (+51 more)
archive/: PACKER_FINAL_STATUS.md  PACKER_RESEARCH_FINDINGS.md  README.md  REVERSE_ENGINEERING_LOG.md
build_converter/: CMakeCache.txt  artboard_only.riv  cmake_install.cmake  shapes_demo.riv  test_bouncing_fixed.riv  test_clean.riv  test_complex_working.riv  test_fixed_bitmap.riv  test_minimal_optimized.riv  test_rect_working.riv  test_shapes.riv
build_real/: CMakeCache.txt  cmake_install.cmake  real_converter_main.cpp  real_json_to_riv_converter.hpp
build_working/: CMakeCache.txt  bouncing_ball_working.riv  cmake_install.cmake  working_converter
cg_renderer/: premake5.lua
converter/: CMakeLists.txt  analyze_chunks.py  analyze_doc  analyze_doc.cpp  analyze_riv.py  bpm_monitor.json  complete_hierarchy_extractor.cpp  comprehensive_test.json  comprehensive_universal.json  dump_riv_objects.cpp  export_riv_to_json.cpp  extract_typekeys.py  extractor_postprocess.hpp  full_extractor.cpp  generate_test_riv.py  heart_rate_scene.json  hierarchical_extractor.cpp  import_check.cpp  import_test.cpp  interactive_monster_analysis.json  json_validator_main.cpp  nature_dump.json  new_file_dump.json  new_file_dump.txt  our_analysis.json  riv_extractor.cpp  riv_to_json_exporter.cpp  test_bind.json  test_dash.json  test_drawtarget_manual.json  test_gradient_hierarchy.json  test_gradient_with_path.json  test_minimal.json  test_minimal_out.json  test_multi_chunk.riv  test_orphan_paint.json  test_shape_reuse.json  test_simple.json  test_simple_min.json  typekey_mapping.json  (+2 more)
converter/exampleriv/: bee_baby.riv  interactive_monster.riv  nature.riv  rectangle.riv  rectangle_red.riv  select_page_(pagination).riv
converter/include/: animation_packer.hpp  core_builder.hpp  font_utils.hpp  hierarchical_schema.hpp  json_loader.hpp  json_validator.hpp  serializer.hpp  serializer_diagnostics.hpp  universal_builder.hpp
converter/src/: animation_packer.cpp  asset_builder.cpp  core_builder.cpp  hierarchical_parser.cpp  json_loader.cpp  json_validator.cpp  main.cpp  riv_structure.md  serializer.cpp  universal_builder.cpp
converter/tests/: forward_ref.json  trimpath_empty.json
decoders/: premake5_v2.lua
dependencies/: config_directories.sh  jconfig.h  miniaudio.m  premake5_glfw_v2.lua  premake5_harfbuzz.lua  premake5_harfbuzz_v2.lua  premake5_libjpeg_v2.lua  premake5_libpng.lua  premake5_libpng_v2.lua  premake5_libwebp_v2.lua  premake5_miniaudio.lua  premake5_miniaudio_v2.lua  premake5_optick.lua  premake5_sheenbidi.lua  premake5_sheenbidi_v2.lua  premake5_yoga.lua  premake5_yoga_v2.lua  rive_harfbuzz_renames.h  rive_libjpeg_renames.h  rive_png_renames.h  rive_yoga_renames.h
dev/: analyze.sh  generate_core.sh  list_objects.cpp  setup_premake.sh  trimpath_dump.cpp  update_defs.sh
docs/: ANIMATION_PACKER_IMPLEMENTATION.md  BPM_BLACK_SCREEN_FINAL_DIAGNOSIS.md  BPM_DASHBOARD_BLACK_SCREEN_ANALYSIS.md  COMPARATIVE_ANALYSIS_ORPHAN_FILL.md  COMPARATIVE_ANALYSIS_REPORT.md  DRAWTARGET_ROOT_CAUSE_FINAL.md  EXACT_ROUNDTRIP_TEST_REPORT.md  EXTRACTOR_SEGFAULT_ANALYSIS.md  GREY_SCREEN_ORPHAN_PAINT_ANALYSIS.md  GREY_SCREEN_ROOT_CAUSE_FINAL.md  HIERARCHICAL_COMPLETE.md  ID_MAPPING_EXECUTIVE_SUMMARY.md  ID_MAPPING_HIERARCHY_ANALYSIS.md  ID_MAPPING_QUICK_REFERENCE.md  INTERPOLATORID_BUG_FIX.md  INTERPOLATORID_FIX_SUMMARY.md  KEYED_DATA_INVESTIGATION.md  NEXT_SESSION_HIERARCHICAL.md  NULL_OBJECTS_FIX_PROGRESS.md  PACKER_ALTERNATIVE_STRATEGY.md  PROJECT_STATUS.md  PR_EXTRACTOR_DASH_PLAN.md  PR_KEYED_DATA_ORDERING_PLAN.md  PR_KEYED_DATA_QUICKREF.md  PR_ORPHAN_SM_SUMMARY.md  PR_PLAN_GREY_SCREEN_FIX.md  PR_PLAN_KEYED_DATA_EXPORT.md  PR_VALIDATION_RESULTS.md  README.md  RENDER_ISSUE_DEEP_ANALYSIS.md  REVERSE_ENGINEERING_LOG.md  RIVE_RUNTIME_JSON_URETIM_KURAL_SETI.md  ROUNDTRIP_INSTABILITY_ROOT_CAUSE.md  ROUND_TRIP_SUCCESS_REPORT.md  SESSION_SUMMARY_SEP30.md  STATE_MACHINE_BPM_BINDING_ANALYSIS.md  UNIVERSAL_BUILDER_DEBUG.md  VALIDATION_INFRASTRUCTURE.md
output/: COMPREHENSIVE_TEST_REPORT.md  README.md  VALIDATION_REPORT.md  bee_baby_COMPLETE_EXTRACT.json  bee_baby_FIXED.json  bee_baby_FIXED_190.json  bee_baby_FIXED_20.json  bee_baby_NO_TRIMPATH.json  bee_baby_WITH_TARGETID.json  bee_baby_WITH_TRIMPATH.json  bee_hierarchical.json  comprehensive_universal_fixed.json  pr2_bee_100.json  pr2_bee_186.json  pr2_bee_188.json  pr2_bee_190.json  pr2_bee_200.json  pr2_bee_50.json  pr2_simple_rect.json  simple_universal.json  simple_universal_fixed.json  test_100.json  test_150.json  test_200.json  test_22.json  test_23.json  test_23_with_trimpath.json  test_24.json  test_25.json  test_30.json  test_40.json  test_50.json  test_dash_extracted.json  test_gradient_extracted.json
renderer/: README.md  make_dawn.sh  make_moltenvk.sh  make_swiftshader.sh  premake5.lua  premake5_pls_renderer.lua
rivinfo/: build.sh  main.cpp
scripting/: premake5.lua  rive_luau.hpp
scripts/: analyze_chunks.py  analyze_growth.py  analyze_packed_blobs.py  analyze_roundtrip_growth.py  binary_diff_analyzer.py  compare_original_roundtrip.py  compare_riv_files.py  complete_working_encoder.py  decode_packed_sequence.py  decode_type64.py  deep_binary_diff.py  deep_dive_8064.py  deep_roundtrip_test.sh  detect_floats_in_8064.py  (+14 more)
(+1864 files in other folders)
